--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 dj-database-url==2.2.0
+django==4.2.16
 django-cors-headers==4.4.0
 django-environ==0.11.2
 djangorestframework==3.15.2
